--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -87,6 +87,12 @@ header span.red {
   mix-blend-mode: lighten;
 }
 
+.separate {
+  width: 100%;
+  height: 10px;
+  background: white;
+}
+
 .see-separator {
   width: 70px;
   height: 0;
@@ -214,13 +220,13 @@ header span.red {
 
 .first-project {
   background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8)),
-    url('../images/first-project.png') 10% / 110% no-repeat;
+
+    url('../images/first-project.png') 10% / 100% no-repeat;
 }
 
 .second-project {
   background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(255, 255, 255, 0), rgba(0, 0, 0, 0.8)),
+   
     url('../images/second-project.png') center / 100% no-repeat;
 }
 
@@ -304,13 +310,13 @@ div.languages,
 
 .shop-project {
   background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
+
     url('../images/online-shop-mini.png') center / 50% no-repeat;
 }
 
 .shop-project-mini {
   background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
+
     url('../images/online-shop-mini-2.png') center / 100% no-repeat;
 }
 
@@ -322,13 +328,13 @@ div.languages,
 
 .todo-project {
   background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
+ 
     url('../images/todo-shop-mini.png') center / 50% no-repeat;
 }
 
 .todo-project-mini {
   background:
-    linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0)),
+
     url('../images/todo-shop-mini-2.png') center / 100% no-repeat;
 }
 
